[metadata]
name = pybuildingenergy
version = 2.0.3
description = library to simulate builiding energy performance using EN ISO 52000, EN ISO 15316, EN ISO 16798, EN ISO 12831, and more
author = Daniele antonucci, Ulrich Filippi Oberegger    
author_email = daniele.antonucci@eurac.edu, ulrich.filippi@eurac.edu
license = BSD 3-Clause License
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EURAC-EEBgroup/pyBuildingEnergy/
project_urls =
    Documentation = https://eurac-eebgroup.github.io/pybuildingenergy-docs/
    Source = https://github.com/EURAC-EEBgroup/pyBuildingEnergy/
    Changelog = https://github.com/EURAC-EEBgroup/pyBuildingEnergy/CHANGELOG.md
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

# setup.cfg
[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
norecursedirs =
    dist
    build
    .tox  

# [devpi:upload]
# # Options for the devpi: PyPI server and packaging tool
# # VCS export must be deactivated since we are using setuptools-scm
# no_vcs = 1
# formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

